chnages in text

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -193,21 +193,18 @@
                     <div class="onboarding-card">
                         <div class="onboarding-card-body">
                             <h3 class="you-are-all-set-">
-                                You are all set!
+                                Fantastic!
                                 <span class="imoji1">
                                     <img src="images/thumb.png" alt="imoji1">
                                 </span>
                             </h3>
-                            <p class="the-training-of-your">The training of your engine is ongoing. You'll be notified by email once completed!</p>
+                            <p class="the-training-of-your">To start delighting your customers, book an intro call with our experts first.</p>
                             <img src="images/jatana_ilustration_05.png" srcset="images/jatana_ilustration_05.png, images/jatana_ilustration_05.png" class="jatana_ilustration_05">
-                            <h1 class="while-the-training-i">
-                                <span class="text-style-1">While the training is ongoing…</span>
-                            </h1>
                             <p class="-book-a-one-to-one">
                                 <span class="imoji2">
                                     <img src="images/indicator.png">
                                 </span>
-                                Book a one-to-one consultation with one of our experts and learn how to get the most of Jatana.
+                                During the call, we will analyse your case and define the best strategy to deploy AI in your contact center.
                             </p>
                             <a href="https://www.jatana.ai/meetings/giovannitoschi/15-min-one-on-one-consultation" target="_blank">
                             <button class="Rectangle-6 onboarding-btn" type="button">
