--- a/assets/modal.html
+++ b/assets/modal.html
@@ -31,8 +31,8 @@
               <div class="access_popup_footer_extra">
                   <p class="accept_policy">By clicking the
                       <strong>Grant Access</strong> button below you agree to our
-                      <a href="#">Terms and Conditions</a> as well as our
-                      <a href="#">Data Protection Policy</a>
+                      <a href="https://www.jatana.ai/terms">Terms and Conditions</a> as well as our
+                      <a href="https://www.jatana.ai/gdpr-whitepaper">Data Protection Policy</a>
                   </p>
                   <p class="footer_text">
                       If you have any questions please reach out to
