--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -459,6 +459,42 @@
     </div>
   </script>
 
+  <script id="in-progress" type="text/x-handlebars-template">
+  <section class="ui-section" style="height: 400px;">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-5 m-auto">
+                  <div class="onboarding-card">
+                      <div class="onboarding-card-body">
+                          <h3 class="you-are-all-set-">
+                              Fantastic!
+                              <span class="imoji1">
+                                  <img src="images/thumb.png" alt="imoji1">
+                              </span>
+                          </h3>
+                          <p class="the-training-of-your">To start delighting your customers, book an intro call with our experts first.</p>
+                          <img src="images/jatana_ilustration_05.png" srcset="images/jatana_ilustration_05.png, images/jatana_ilustration_05.png" class="jatana_ilustration_05">
+                          <p class="-book-a-one-to-one">
+                              <span class="imoji2">
+                                  <img src="images/indicator.png">
+                              </span>
+                              During the call, we will analyse your case and define the best strategy to deploy AI in your contact center.
+                          </p>
+                          <a href="https://cal.mixmax.com/francescostasi/25" target="_blank">
+                          <button class="Rectangle-6 onboarding-btn" type="button">
+                              <span class="Button-text">
+                                  BOOK NOW
+                              </span>
+                          </button>
+                        </a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+</script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
