--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -91,7 +91,7 @@
                     ./images/image-2-get-started@3x.png 3x" />
                 </div>
                 <div class="footer-section">
-                    <a href="https://zendesk.jatana.ai/zendesk_profile?identifier={{subdomain}}&platform=Zendesk_Support&email={{email}}&name={{name}}&timezone={{timezone}}&source=zendesk" target="_blank" class="btn btn-yellow">GET STARTED →</a>
+                    <a href="https://app.jatana.ai?platform=Zendesk_Supportsource=zendesk" target="_blank" class="btn btn-yellow">GET STARTED →</a>
                     <p>Follow the instructions to setup Jatana</p>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     ./images/image-3-updgrade@3x.png 3x" />
                 </div>
                 <div class="footer-section">
-                    <a href="https://zendesk.jatana.ai/zendesk_profile?identifier={{subdomain}}&platform=Zendesk_Support&email={{email}}&name={{name}}&timezone={{timezone}}&source=zendesk" target="_blank" class="btn btn-yellow">Upgrade</a>
+                    <a href="https://app.jatana.ai?platform=Zendesk_Supportsource=zendesk" target="_blank" class="btn btn-yellow">Upgrade</a>
                     <p>No commitment, cancel anytime</p>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     ./images/image-4-create-model@3x.png 3x" />
                 </div>
                 <div class="footer-section">
-                    <a href="https://zendesk.jatana.ai/zendesk_profile?identifier={{subdomain}}&platform=Zendesk_Support&email={{email}}&name={{name}}&timezone={{timezone}}&source=zendesk" target="_blank" class="btn btn-yellow">CREATE MODEL</a>
+                    <a href="https://app.jatana.ai?platform=Zendesk_Supportsource=zendesk" target="_blank" class="btn btn-yellow">CREATE MODEL</a>
                     <p>Follow the instructions to create a model</p>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                     ./images/image-6-no-actions-left@3x.png 3x" />
                 </div>
                 <div class="footer-section">
-                    <a href="https://zendesk.jatana.ai/zendesk_profile?identifier={{subdomain}}&platform=Zendesk_Support&email={{email}}&name={{name}}&timezone={{timezone}}&source=zendesk" target="_blank" class="btn btn-yellow">Upgrade Plan</a>
+                    <a href="https://app.jatana.ai?platform=Zendesk_Supportsource=zendesk" target="_blank" class="btn btn-yellow">Upgrade Plan</a>
                     <p>No commitment, cancel anytime</p>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                     ./images/image-5-no-money@3x.png 3x" />
                 </div>
                 <div class="footer-section">
-                    <a href="#" class="btn btn-yellow">GO TO PAYMENT SETTINGS</a>
+                    <a href="https://app.jatana.ai?platform=Zendesk_Supportsource=zendesk" class="btn btn-yellow">GO TO PAYMENT SETTINGS</a>
                 </div>
             </div>
         </div>
@@ -472,15 +472,15 @@
                                   <img src="images/thumb.png" alt="imoji1">
                               </span>
                           </h3>
-                          <p class="the-training-of-your">To start delighting your customers, book an intro call with our experts first.</p>
+                          <p class="the-training-of-your">You have granted access to your data. Our AI engine will take some time to go through the historical data.</p>
                           <img src="images/jatana_ilustration_05.png" srcset="images/jatana_ilustration_05.png, images/jatana_ilustration_05.png" class="jatana_ilustration_05">
                           <p class="-book-a-one-to-one">
                               <span class="imoji2">
                                   <img src="images/indicator.png">
                               </span>
-                              During the call, we will analyse your case and define the best strategy to deploy AI in your contact center.
+                              Book a meeting so we can show you how much you can save.
                           </p>
-                          <a href="https://cal.mixmax.com/francescostasi/25" target="_blank">
+                          <a href="https://cal.mixmax.com/francescostasi/jatana" target="_blank">
                           <button class="Rectangle-6 onboarding-btn" type="button">
                               <span class="Button-text">
                                   BOOK NOW
